2011-01-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix bug with notifications ... was not always
	sending them when a domain was modified.

2011-01-29  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSLocale.h: Use GS_EXPOSE(NSLocale).
	* Source/NSLocale.m: ([-autoupdatingCurrentLocale]) Handle locale
	updates.
	([-currentLocale]) Check Locale default for current user's locale.
	([-preferredLanguages]) Do not add same language multiple times.

2011-01-28  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Fixed errors found by test suite.

2011-01-27  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCalendar.m: Add -isEqual:.

2011-01-27  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCalendar.m: Open UCalendar before use.

2011-01-27  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Set some sensible defaults.

2011-01-26  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Add currency code to locale identifier, if present.
	* Source/NSDateFormatter.m: Fix crash on dealloc because of autoreleased
	object.

2011-01-26  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Minor memory mgt fixes.

2011-01-24  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Fixes for formatter behavior.

2011-01-24  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m: Check ICU presence in private function.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Redo the calendar code.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Add calendar.
	* Source/NSNumberFormatter.m: Compile again.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m:
	* Source/NSNumberFormatter.m:
	* Source/NSCalendar.m: Remove use of OS_API_VERSION() in .m files.
